Dock footer to the bottom; fix for spacing after nav-bar

--- a/client/src/home/CarouselContainer.css
+++ b/client/src/home/CarouselContainer.css
@@ -1,13 +1,8 @@
-.carousel {
-  margin-top: 70px;
-}
-
 .carousel img {
   width: 100%;
   max-width: 100;
   height: 450px;
   text-align: center;
-  margin: 10px 0 0 0;
 }
 
 .carousel-item:nth-of-type(2) .carousel-image {
@@ -15,7 +10,7 @@
 }
 
 .carousel-caption {
-  top: 10px;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
